支持是否分页，增加Region支持